--- a/css/style.css
+++ b/css/style.css
@@ -81,6 +81,9 @@ body {
   right: 0;
 }
 
+.slider {
+  position: relative;
+}
 .slide {
   border-radius: 20px;
   min-height: 400px;
@@ -89,9 +92,11 @@ body {
   padding: 100px;
   overflow: hidden;
   position: relative;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 .slide-content {
-  max-width: 400px;
+  max-width: 450px;
   position: relative;
 }
 .slide-title {
@@ -111,14 +116,31 @@ body {
   background-color: gray;
   color: white;
 }
+.slider-buttons {
+  width: 100px;
+  position: absolute;
+  bottom: 40px;
+  right: 46px;
+  z-index: 9;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.slider-button {
+  cursor: pointer;
+}
 
+.slide-autumn {
+  background-image: url('../img/slide1.jpg');
+}
 .slide-summer {
   background-image: url('../img/summer.png');
-  background-repeat: no-repeat;
-  background-size: cover;
-  /* background-image: url('../img/summer-min.png'); */
 }
-.slide-summer::before {
+.slide-vitamin {
+  background-image: url('../img/slide3.jpg');
+}
+
+.slide::before {
   content: '';
   position: absolute;
   left: 0;
@@ -316,6 +338,7 @@ body {
   max-width: 270px;
   border-radius: 20px;
   margin-left: 37px;
+  margin-bottom: 37px;
   overflow: hidden;
   background: white;
   box-shadow: 0px 4px 40px rgba(0, 0, 0, 0.1);
@@ -324,7 +347,7 @@ body {
   width: 100%;
 }
 .tabs-content {
-  margin-bottom: 58px;
+  margin-bottom: 18px;
   display: flex;
   margin-left: -37px;
 }
@@ -376,7 +399,7 @@ body {
 
 .section-benefits {
   padding-top: 80px;
-  padding-bottom: 200px;
+  padding-bottom: 150px;
 }
 .section-benefits-title {
   font-size: 32px;
@@ -388,17 +411,35 @@ body {
   margin-top: 52px;
   display: flex;
   margin-left: -37px;
+  justify-content: center;
 }
 .benefits-card-item {
   width: 270px;
   padding: 24px;
   margin-left: 37px;
+  margin-bottom: 30px;
   text-align: center;
   background-color: #fff;
   border: 1px solid #e9e9e9;
   box-sizing: border-box;
   box-shadow: 0px 4px 40px rgba(0, 0, 0, 0.1);
   border-radius: 18px;
+}
+.benefits-card-item:hover {
+  color: white;
+  background-color: #f37321;
+}
+.benefits-card-item:hover .benefit-description {
+  color: white;
+}
+.benefits-card-item:hover .benefit-image {
+  color: white;
+}
+
+.benefit-image {
+  background-color: #fff;
+  border-radius: 12px;
+  padding: 5px;
 }
 .benefit-title {
   padding: 0 15px;
@@ -437,4 +478,71 @@ body {
 .social-link {
   margin-left: 20px;
   text-decoration: none;
+}
+
+@media (max-width: 1260px) {
+  .container {
+    width: 960px;
+  }
+  .search-form {
+    margin-left: 40px;
+    margin-right: 40px;
+  }
+  .tabs-content {
+    flex-wrap: wrap;
+  }
+  .tabs-card {
+    flex: 50%;
+    max-width: calc(50% - 37px);
+  }
+  .benefits-cards {
+    flex-wrap: wrap;
+  }
+  .benefits-card-item {
+    flex: 50%;
+    max-width: calc(50% - 37px);
+  }
+}
+
+@media (max-width: 992px) {
+  .container {
+    width: 760px;
+  }
+  .slide {
+    padding: 70px;
+  }
+  .delivery-card {
+    width: calc(50% - 30px);
+  }
+  .footer-logo {
+    margin-right: 45px;
+  }
+  .social-link {
+    margin-left: 8px;
+  }
+}
+
+@media (max-width: 768px) {
+  .container {
+    width: 560px;
+  }
+  .header {
+    flex-wrap: wrap;
+  }
+  .search-form {
+    order: 5;
+    margin: 15px 0;
+  }
+  .promo {
+    flex-wrap: wrap;
+  }
+  .footer-logo {
+    margin-right: 35px;
+  }
+  .footer-nav {
+    max-width: 200px;
+  }
+  .social-link {
+    margin-left: 2px;
+  }
 }
